<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UpdateUIActivity">
    
    <data>
        <variable
            name="users"
            type="com.app.databinding.Users" />

        <variable
            name="updateViews"
            type="com.app.databinding.UpdateUIClickHandler" />
    </data>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarUpdateUI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Update UI" />

    <TextView
        android:id="@+id/FirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@{users.firstName}"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/LastName"
        android:text="@{users.lastName}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtFname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtLname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/enter_last_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="@{updateViews::updateUIComponents}"
        android:text="@string/update_names" />
</LinearLayout>

</layout>